--- a/Kira.tex
+++ b/Kira.tex
@@ -1292,20 +1292,22 @@ Figure~\ref{fig:stream}
   	\end{center}
 \end{figure}
 
+Table~\ref{tb:stream}
+
 \begin{table}[h]
   \begin{center}
-  \caption{Streaming SE Interval Configuration and Sustained Throughput}
+  \caption{Streaming SE Interval Configuration and Performance}
     \begin{small}
-    \begin{tabular}{ | c | c | c | c |}
+    \begin{tabular}{ | c | c | c | c | c |}
     \hline
-     & Inter Conf & Actual Delay & Sus Perf \\ \hline \hline
-    8 arrivals & & & \\ \hline
-    4 arrivals & & & \\ \hline  
-    2 arrivals & & & \\ \hline
-    1 arrivals & & & \\ \hline
+     & Exe Delay & Int  & Sus Tput & Total Delay\\ \hline \hline
+    8 arrs & $8.4\pm3.3$~s & 11~s & 562.1~MB/s & 19.4~s\\ \hline
+    4 arrs & $4.4\pm2$~s & 7~s & 441.7~MB/s & 11.4~s\\ \hline  
+    2 arrs & $2.7\pm1.5$~s & 4~s & 386.4~MB/s & 4.7~s\\ \hline
+    1 arrs & $1.9\pm1.1$~s & 3~s & 257.6~MB/s & 4.9~s\\ \hline
     \end{tabular}
     \end{small}   
-  \label{tb:streaming}     	
+  \label{tb:stream}     	
   \end{center}
 \end{table}
 
