--- a/Kira.bib
+++ b/Kira.bib
@@ -480,3 +480,20 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@inproceedings{zaharia13,
+ author = {Zaharia, Matei and Das, Tathagata and Li, Haoyuan and Hunter, Timothy and Shenker, Scott and Stoica, Ion},
+ title = {Discretized Streams: Fault-tolerant Streaming Computation at Scale},
+ booktitle = {Proceedings of the Twenty-Fourth ACM Symposium on Operating Systems Principles},
+ series = {SOSP '13},
+ year = {2013},
+ isbn = {978-1-4503-2388-8},
+ location = {Farminton, Pennsylvania},
+ pages = {423--438},
+ numpages = {16},
+ url = {http://doi.acm.org/10.1145/2517349.2522737},
+ doi = {10.1145/2517349.2522737},
+ acmid = {2522737},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
