Add ASPIRE affiliation.

--- a/Kira.tex
+++ b/Kira.tex
@@ -435,7 +435,8 @@
 the AMPLab and Berkeley Institute for Data Science, UC Berkeley.\protect
 % note need leading \protect in front of \\ to get a newline within \thanks as
 % \\ is fragile and will error, could use \hfil\break instead.
-\IEEEcompsocthanksitem Frank~Austin~Nothaft, Evan~Sparks, David~A.~Patterson are with the AMPLab, UC Berkeley
+\IEEEcompsocthanksitem Frank~Austin~Nothaft, David~A.~Patterson are with the AMP and ASPIRE Labs, UC Berkeley
+\IEEEcompsocthanksitem Evan~Sparks is with the AMPLab, UC Berkeley
 \IEEEcompsocthanksitem Kyle~Barbary, Oliver~Zahn, and Saul~Perlmutter are with
 Berkeley Institute for Data Science and Berkeley Center for Cosmological Physics, UC Berkeley.
 }% <-this % stops an unwanted space
