--- a/Kira.tex
+++ b/Kira.tex
@@ -1525,6 +1525,7 @@ This research is also supported in part by the Gordon and Betty Moore
 Foundation and the Alfred P. Sloan Foundation together through the
 Moore-Sloan Data Science Environment program.
 
+This research used resources of the National Energy Research Scientific Computing Center, a DOE Office of Science User Facility supported by the Office of Science of the U.S. Department of Energy under Contract No. DE-AC02-05CH11231.
 
 % Can use something like this to put references on a page
 % by themselves when using endfloat and the captionsoff option.
